[package]
name = "tui-realm-textarea"
version = "2.1.0"
authors = ["Christian Visintin"]
edition = "2021"
categories = ["command-line-utilities"]
description = "textarea component for tui-realm"
documentation = "https://docs.rs/tui-realm-textarea"
homepage = "https://github.com/veeso/tui-realm-textarea"
include = ["examples/**/*", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["tui", "terminal"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso/tui-realm-textarea"

[dependencies]
cli-clipboard = { version = "^0.4", optional = true }
lazy-regex = "^3"
tuirealm = { git = "https://github.com/g1ibby/tui-realm", branch = "feat/terminal-options-support" default-features = false, features = ["derive"] }
tui-textarea = { git = "https://github.com/g1ibby/tui-textarea", branch = "feat/bump-ratatui" }

[dev-dependencies]
crossterm = "^0.28"
pretty_assertions = "1"
tui-realm-stdlib = { git = "https://github.com/g1ibby/tui-realm-stdlib", branch = "feat/custom-tuirealm"}

[features]
default = ["crossterm"]
clipboard = ["cli-clipboard"]
search = ["tui-textarea/search"]
crossterm = ["tuirealm/crossterm"]
termion = ["tuirealm/termion"]

[[example]]
name = "editor"
path = "examples/editor.rs"
required-features = ["crossterm"]

[[example]]
name = "single-line"
path = "examples/single_line.rs"
required-features = ["crossterm"]
